fix spacing between 2 container and set the postion of image and icon

--- a/src/CSS/mediaqueries.css
+++ b/src/CSS/mediaqueries.css
@@ -235,6 +235,14 @@
         width: 68%;
         margin-bottom: 50px;
     }
+
+    .reviews-container{
+        width: 80%;
+    }
+
+    .reviews-header{
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width:768px){
